# imgview

./: .gitignore  CMakeLists.txt  README.md
include/imgview/: global.h  image.h  mosaic.h  renderer.h  shader.h  window.h
src/: image.cpp  mosaic.cpp  renderer.cpp  shader.cpp  window.cpp
test/: test_pipeline.cpp  test_simple1.cpp  test_simple2.cpp
